--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ a{
   text-decoration: none;
   color: inherit;
 }
+/* first view */
 .section1{
   width: 100%;
   height: 80vh;
@@ -37,6 +38,8 @@ a{
   color: white;
   margin-left: 10%;
 }
+
+/* navigation */
 
 .section2{
   height: 100vh;
@@ -73,7 +76,7 @@ opacity: 0.6;
   color: var(--color-two);
   margin-right: 8px;
 }
-
+/* help us to remember */
 .section4{
   width: 100%;
   height: 50vh;
@@ -93,7 +96,7 @@ opacity: 0.6;
 .row{
   color: white;
 }
-
+/* footer section */
 .section5
 {
   width: 100%;
@@ -257,65 +260,67 @@ li i {
 
 
 /* login */
+
+
 .dbody{
-  font-family: "Kameron", cursive;
-  margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  background: #f5f5f5;
-  color: #333;
-}
-
-.dcontainer {
-  width: 100%;
-  max-width: 400px;
-}
-
-.dcard {
-  width: 100%;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.dh2 {
-  text-align: center;
-  color: #333;
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-}
-
-.input {
-  padding: 10px;
-  margin-bottom: 12px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  transition: border-color 0.3s ease-in-out;
-  outline: none;
-  color: #333;
-}
-
-.input:focus {
-  border-color: #ff4500;
-}
-
-.dbutton {
-  background-color: #ff4500;
-  color: #fff;
-  padding: 10px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease-in-out;
-}
-
-.dbutton:hover {
-  background-color: #e63900;
-}
-
+    font-family: "Kameron", cursive;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: #f5f5f5;
+    color: #333;
+  }
+  
+  .dcontainer {
+    width: 100%;
+    max-width: 400px;
+  }
+  
+  .dcard {
+    width: 100%;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .dh2 {
+    text-align: center;
+    color: #333;
+  }
+  
+  .form {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .input {
+    padding: 10px;
+    margin-bottom: 12px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    transition: border-color 0.3s ease-in-out;
+    outline: none;
+    color: #333;
+  }
+  
+  .input:focus {
+    border-color: #ff4500;
+  }
+  
+  .dbutton {
+    background-color: #ff4500;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+  }
+  
+  .dbutton:hover {
+    background-color: #e63900;
+  }
+  
